--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
   <title>NavigationBar</title>
@@ -8,11 +8,22 @@
 <body>
 
 <div th:fragment="top_navigation_bar">
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" th:href="@{/}">Home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+
+  <a sec:authorize="isAnonymous()" class="navbar-brand" th:href="@{/}">Home</a>
+  <a sec:authorize="isAnonymous()" class="navbar-brand" th:href="@{/auth/login}">Sign in</a>
+  <a sec:authorize="isAnonymous()" class="navbar-brand" th:href="@{/registration}">Sign up</a>
+
+  <div sec:authorize="isAuthenticated()">
+    <form th:action="@{/auth/logout}" th:method="POST">
+      <input type="submit" value="Log out!">
+    </form>
+  </div>
+
+  <a sec:authorize="isAuthenticated()" class="navbar-brand" th:href="@{/profile}">Profile</a>
+
+
 
 </div>
 
