--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -5,18 +5,23 @@
     <title>Home Page</title>
     <div th:replace="fragments/common :: common_head"></div>
 
+
 </head>
 
 <body>
 
 <div th:insert ="fragments/navbar :: top_navigation_bar"></div>
 
-<h1>Hello, it is home page</h1>
-
-<div th:each="board : ${boardsList}">
-    <a th:href="@{/boards/{boardName}(boardName=${board.getName()})}" th:text="${board.getName()}"></a>
+<div class="container text-center">
+        <h1>It is home page</h1>
 </div>
 
-</body>
 
+<div id="homePage_boardsListFragment" th:replace="fragments/home/boardsListFragment :: boardsListFragment">
+</div>
+
+
+
+
+</body>
 </html>
