--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -3,8 +3,15 @@
 <div th:fragment="common_head">
     <meta charset="UTF-8">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<!--    bootstrap webjars-->
+    <link th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}" rel="stylesheet" type="text/css" >
+    <script th:src="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.js}" type="text/javascript"> </script>
+
+<!--    jquery webjars-->
+    <script th:src="@{/webjars/jquery/3.6.1/dist/jquery.min.js}" type="text/javascript"> </script>
+
+    <!--    jquery validation webjar-->
+    <script th:src="@{/webjars/jquery-validation/1.19.3/dist/jquery.validate.js}" type="text/javascript"> </script>
 
 </div>
 </body>
