--- a/src/main/resources/templates/registration/registrationPage.html
+++ b/src/main/resources/templates/registration/registrationPage.html
@@ -12,11 +12,16 @@
 <div th:insert ="fragments/navbar :: top_navigation_bar"></div>
 
 <form th:method="POST" th:action="@{/registration}" th:object="${user}" >
-  <label for="username">Введите имя пользователься</label>
+  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+  <label for="username">Введите имя пользователься :</label>
   <input type="text" th:field="*{username}" id="username"/>
   <div style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</div>
   </br>
-  <label for="password">Ввелите пароль</label>
+  <label for="email">Введите вашу почту :</label>
+  <input type="text" th:field="*{email}" id="email"/>
+  <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
+  </br>
+  <label for="password">Ввелите пароль :</label>
   <input type="password" th:field="*{password}" id="password"/>
   <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</div>
   </br>
