--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -14,6 +14,7 @@
   <a sec:authorize="isAnonymous()" class="navbar-brand" th:href="@{/}">Home</a>
   <a sec:authorize="isAnonymous()" class="navbar-brand" th:href="@{/auth/login}">Sign in</a>
   <a sec:authorize="isAnonymous()" class="navbar-brand" th:href="@{/registration}">Sign up</a>
+  <a class="navbar-brand" th:href="@{/chat}">Chat</a>
 
   <div sec:authorize="isAuthenticated()">
     <form th:action="@{/auth/logout}" th:method="POST">
