--- a/src/main/resources/templates/boards/publications/publicationPage.html
+++ b/src/main/resources/templates/boards/publications/publicationPage.html
@@ -5,6 +5,7 @@
   <title>Publication Page</title>
   <div th:replace="fragments/common :: common_head"></div>
 
+  <script type="text/javascript" th:src="@{/js/boards/publications/commentForm.js}"></script>
 </head>
 
 <body>
@@ -26,13 +27,10 @@
 
 <div>
   <p>Leave your comment:</p>
-  <form th:method="POST" th:action="@{/boards/{boardName}/{publicationId}/create(boardName=${board.getName()},publicationId=${publication.getId()})}" th:object="${comment}">
-    <label for="textOfComment">Enter text: </label>
-    <input type="text" th:field="*{textOfComment}" id="textOfComment"/>
-    <div style="color:red" th:if="${#fields.hasErrors('textOfComment')}" th:errors="*{textOfComment}">text error</div>
-    <br/>
-    <input type="submit" value="Create!"/>
-  </form>
+      <label for="textOfComment">Enter text: </label>
+      <input type="text" id="textOfComment"/>
+      <br/>
+  <button onclick="sendCommentRest()"> Send comment </button>
 </div>
 
 </body>
