--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -13,6 +13,11 @@
     <!--    jquery validation webjar-->
     <script th:src="@{/webjars/jquery-validation/1.19.3/dist/jquery.validate.js}" type="text/javascript"> </script>
 
+    <script
+            src="https://code.jquery.com/jquery-3.6.1.min.js"
+            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+            crossorigin="anonymous"></script>
+
 </div>
 </body>
 </html>
