--- a/src/main/resources/templates/fragments/boards/publicationFragment.html
+++ b/src/main/resources/templates/fragments/boards/publicationFragment.html
@@ -1,6 +1,19 @@
-<div th:fragment="publication_fragment">
 
-    <div class = "row">
+<div class= "container w-50, p-3 mb-2 bg-success text-white" th:fragment="publication_fragment">
+
+    <div class = "row justify-content-md-center">
+        <div class="col">
+            <p th:text="author"></p>
+        </div>
+    </div>
+
+    <div class = "row justify-content-md-center">
+        <div class="col">
+            <p th:text="${publication.getNameOfPublication()}"></p>
+        </div>
+    </div>
+
+    <div class = "row justify-content-md-center">
         <div class="col">
             <p th:text="${publication.getId()}"></p>
         </div>
@@ -9,10 +22,15 @@
         </div>
     </div>
 
-    <div class = "row">
+    <div class = "row justify-content-md-center">
         <div class="col">
             <p th:text="${publication.getTextOfPublication()}"></p>
         </div>
     </div>
 
+
+    </br>
+    </br>
+
 </div>
+
