--- a/src/main/resources/templates/fragments/chat/messageFragment.html
+++ b/src/main/resources/templates/fragments/chat/messageFragment.html
@@ -2,6 +2,6 @@
 <div th:fragment="messagefragment_chat">
 
   <div>
-  <p th:text="${message.getTextOfMessage()}"> </p>
+  <p th:text="${chatMessage.getTextOfMessage()}"> </p>
   </div>
 </div>
