--- a/src/main/resources/templates/auth/loginPage.html
+++ b/src/main/resources/templates/auth/loginPage.html
@@ -13,7 +13,7 @@
 
 
 <form name="f" method="post" action="/login_auth">
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+<!--    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
     <label for="username">Введите имя пользователя:</label>
     <input type="text" name="username" id="username" />
     <br/>
