--- a/src/main/resources/templates/registration/registrationPage.html
+++ b/src/main/resources/templates/registration/registrationPage.html
@@ -12,7 +12,7 @@
 <div th:insert ="fragments/navbar :: top_navigation_bar"></div>
 
 <form th:method="POST" th:action="@{/registration}" th:object="${user}" >
-  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+<!--  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
   <label for="username">Введите имя пользователься :</label>
   <input type="text" th:field="*{username}" id="username"/>
   <div style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</div>
